| Summary: | ASTERISK-20545: chan_sip loads too early because of exposed global symbols | ||||
| Reporter: | Kinsey Moore (kmoore) | Labels: | |||
| Date Opened: | 2012-10-10 15:47:59 | Date Closed: | 2012-10-11 16:29:13 | ||
| Priority: | Blocker | Regression? | |||
| Status: | Closed/Complete | Components: | Channels/chan_sip/Messaging | ||
| Versions: | 11.0.0-beta2 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Situations in which chan_sip is dependent on other modules loading before it. | Attachments: | |||
| Description: | When a global symbol was added to chan_sip to expose the ability to send INFO frames, it caused chan_sip to be loaded earlier than expected based on its load_pri value of AST_MODPRI_CHANNEL_DRIVER. | ||||
| Comments: | By: Matt Jordan (mjordan) 2012-10-11 16:28:57.209-0500 Committed in: r374842 | ||||